# green-field

./: .env  pyproject.toml  requirements.txt  test_neo4j.py
src/problem_solving_crew/: crew.py  main.py
src/problem_solving_crew/config/: agents.yaml  tasks.yaml
src/problem_solving_crew/tools/: tools.py
