[tool.poetry]
name = "green-field"
version = "0.1.0"
description = ""
authors = ["Levi Zortman <levizortman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
crewai = "^0.30.8"
crewai-tools = "^0.2.6"
"yaml-1.3" = "^0.1.0"
langchain = "^0.1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
